added html blocks for time; added real time with moment.js; added color changing responsiveness to scheduled time blocks

--- a/index.html
+++ b/index.html
@@ -30,9 +30,84 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <!-- 9AM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">09:00AM</span>
+            <input id="0900" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 10AM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">10:00AM</span>
+            <input id = "1000" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 11AM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">11:00AM</span>
+            <input id="1100" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 12PM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">12:00PM</span>
+            <input id="1200" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 1PM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">01:00PM</span>
+            <input id="1300" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 2PM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">02:00PM</span>
+            <input id="1400" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 3PM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">03:00PM</span>
+            <input id="1500" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 4PM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">04:00PM</span>
+            <input id="1600" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+        <!-- 5PM -->
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">05:00PM</span>
+            <input id="1700" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src ="script.js"></script>
   </body>
 </html>
