--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">09:00AM</span>
             <input id="0900" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete9"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></span>
           </div>
         </div>
         <!-- 10AM -->
@@ -44,7 +44,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">10:00AM</span>
             <input id = "1000" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete10"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
         <!-- 11AM -->
@@ -52,7 +52,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">11:00AM</span>
             <input id="1100" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete11"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
         <!-- 12PM -->
@@ -60,7 +60,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">12:00PM</span>
             <input id="1200" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete12"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
         <!-- 1PM -->
@@ -68,7 +68,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">01:00PM</span>
             <input id="1300" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete1"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
         <!-- 2PM -->
@@ -76,7 +76,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">02:00PM</span>
             <input id="1400" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete2"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
         <!-- 3PM -->
@@ -84,7 +84,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">03:00PM</span>
             <input id="1500" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete3"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
         <!-- 4PM -->
@@ -92,7 +92,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">04:00PM</span>
             <input id="1600" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete4"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
         <!-- 5PM -->
@@ -100,7 +100,7 @@
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">05:00PM</span>
             <input id="1700" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete">X</button></span>
+            <span class="input-group-text" id="inputGroup-sizing-lg"><button id="delete5"><img src="/Assets/Images/png-transparent-computer-icons-icon-design-iconfinder-save-icon-miscellaneous-saving-rectangle.png" height="40px" width="40px"/></button></span>
           </div>
         </div>
       </div>
